# XoS

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: test-and-lint.yml  threat-scan.yml
docs/: README.md
docs/api/: README.md
docs/architecture/: README.md  io-envelope.md  overview.md
docs/development/: README.md  ci.md  getting-started.md
docs/security/: README.md  threat-model.md  zero-trust-boundaries.md
src/aletheiacli/: __init__.py  __main__.py
src/aletheiacli/commands/: invoke.py
src/aletheiacli/core/: __init__.py  config.py  emit.py  executor.py  ingress.py  masking.py  sanitizer.py
src/aletheiacli/models/: __init__.py  agent_requests.py  agent_responses.py
src/xos/: __init__.py  __main__.py
src/xos/commands/: invoke.py
src/xos/core/: config.py  emit.py  executor.py  ingress.py  masking.py  sanitizer.py  state.py
src/xos/models/: __init__.py  agent_requests.py
tests/: conftest.py
tests/integration/: test_invoke_cli.py
tests/unit/: test_bootstrap.py  test_executor.py  test_ingress.py  test_masking.py  test_models.py  test_sanitizer.py  test_state.py
