[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xos"
version = "0.0.1"
description = "Secure JSON-mediated CLI boundary for AI agents"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "XoS Contributors" }]
dependencies = [
    "pydantic>=2.10,<3",
    "typer>=0.15,<1",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.14,<2",
    "pytest>=9.0.3,<10",
    "pytest-cov>=6.0,<7",
    "ruff>=0.9,<1",
]

[project.scripts]
xos = "xos.__main__:app"

[tool.hatch.build.targets.wheel]
packages = ["src/xos"]

[tool.hatch.build.targets.sdist]
only-include = ["src/xos"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
extra_checks = true
mypy_path = "src"
packages = ["xos"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "SIM",
    "TCH",
    "PTH",
    "S",
    "RUF",
]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "TC003"]
"src/xos/models/**" = ["TC003"]
"src/xos/commands/**" = ["TC003"]
"src/xos/core/**" = ["TC003"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-ra", "--strict-markers"]

[tool.coverage.run]
source = ["xos"]
branch = true

[tool.coverage.report]
fail_under = 0
show_missing = true

[tool.bandit]
exclude_dirs = [".venv", "tests"]
skips = []
